@@ -11,10 +11,13 @@ SUFFIXES = .H .h .C .cc .c .f .o
 INCLUDES           = @inc_list@
 CCLD = $(F77)
 
-noinst_PROGRAMS          = mgmesh dxmath uhbd_asc2bin
+noinst_PROGRAMS          = mgmesh dxmath uhbd_asc2bin smooth
 mgmesh_SOURCES           = mgmesh.c 
 mgmesh_LDADD             = ../../src/aaa_lib/libapbs.la @lib_list@
 mgmesh_LDFLAGS           = ../../src/aaa_lib/libapbs.la @lib_list@
+smooth_SOURCES           = smooth.c 
+smooth_LDADD             = ../../src/aaa_lib/libapbs.la @lib_list@
+smooth_LDFLAGS           = ../../src/aaa_lib/libapbs.la @lib_list@
 dxmath_SOURCES           = dxmath.c 
 dxmath_LDADD             = ../../src/aaa_lib/libapbs.la @lib_list@
 dxmath_LDFLAGS           = @LDFLAGS@ @FLIBS@
